--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"format": "prettier --write ."
 	},
 	"devDependencies": {
+		"@poppanator/sveltekit-svg": "^4.2.1",
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/adapter-vercel": "^4.0.5",
 		"@sveltejs/kit": "^2.0.0",
@@ -27,7 +28,6 @@
 		"postcss": "^8.4.33",
 		"prettier": "^3.1.1",
 		"prettier-plugin-svelte": "^3.1.2",
-		"rollup-plugin-svelte-svg": "1.0.0-beta.6",
 		"svelte": "^4.2.7",
 		"svelte-check": "^3.6.0",
 		"svelte-typewriter": "^3.2.3",
