--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "dev": "next dev",
     "lint": "next lint",
-    "start": "next start"
+    "start": "next start",
+    "format": "prettier --write ./src"
   },
   "dependencies": {
     "@t3-oss/env-nextjs": "^0.7.1",
@@ -16,6 +17,7 @@
     "@trpc/next": "^10.43.6",
     "@trpc/react-query": "^10.43.6",
     "@trpc/server": "^10.43.6",
+    "@vercel/analytics": "^1.1.2",
     "clsx": "^2.1.0",
     "framer-motion": "^10.18.0",
     "next": "^14.0.4",
@@ -38,7 +40,7 @@
     "eslint": "^8.54.0",
     "eslint-config-next": "^14.0.4",
     "postcss": "^8.4.31",
-    "prettier": "^3.1.0",
+    "prettier": "^3.2.4",
     "prettier-plugin-tailwindcss": "^0.5.7",
     "tailwindcss": "^3.3.5",
     "typescript": "^5.1.6"
