--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@trpc/react-query": "^10.43.6",
     "@trpc/server": "^10.43.6",
     "@vercel/analytics": "^1.1.2",
+    "@vercel/speed-insights": "^1.0.7",
     "clsx": "^2.1.0",
     "framer-motion": "^10.18.0",
     "next": "^14.0.4",
