--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "@vercel/analytics": "^1.1.2",
     "@vercel/speed-insights": "^1.0.7",
     "clsx": "^2.1.0",
+    "date-fns": "^3.3.1",
     "framer-motion": "^10.18.0",
     "next": "^14.0.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-type-animation": "^3.2.0",
+    "react-use": "^17.5.0",
     "server-only": "^0.0.1",
     "superjson": "^2.2.1",
     "zod": "^3.22.4"
