--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@vercel/analytics": "^1.1.2",
     "@vercel/speed-insights": "^1.0.7",
     "clsx": "^2.1.0",
+    "contentful": "^10.6.19",
     "date-fns": "^3.3.1",
     "framer-motion": "^10.18.0",
     "next": "^14.0.4",
