--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-use": "^17.5.0",
     "server-only": "^0.0.1",
     "superjson": "^2.2.1",
+    "tailwind-gradient-mask-image": "^1.1.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
