--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "cSpell.words": ["chunkify", "clsx", "hoverable", "webp"]
+  "cSpell.words": ["chunkify", "clsx", "contentful", "hoverable", "webp"]
 }
