--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "format": "prettier --write ./src"
   },
   "dependencies": {
+    "@contentful/rich-text-react-renderer": "^15.19.4",
     "@t3-oss/env-nextjs": "^0.7.1",
     "@tanstack/react-query": "^4.36.1",
     "@trpc/client": "^10.43.6",
@@ -34,6 +35,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@contentful/rich-text-types": "^16.3.4",
     "@svgr/webpack": "^8.1.0",
     "@types/eslint": "^8.44.7",
     "@types/node": "^18.17.0",
