--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@
 /.pnp
 .pnp.js
 
-# testing
+# testin
 /coverage
 
 # database
@@ -40,3 +40,9 @@ yarn-error.log*
 
 # typescript
 *.tsbuildinfo
+
+# playwright mcp
+.playwright-mcp
+
+# Auto Claude data directory
+.auto-claude/
