--- a/package.json
+++ b/package.json
@@ -11,49 +11,49 @@
     "format": "prettier --write ./src"
   },
   "dependencies": {
-    "@contentful/rich-text-react-renderer": "^15.19.4",
-    "@t3-oss/env-nextjs": "^0.7.1",
-    "@tanstack/react-query": "^4.36.1",
-    "@trpc/client": "^10.43.6",
-    "@trpc/next": "^10.43.6",
-    "@trpc/react-query": "^10.43.6",
-    "@trpc/server": "^10.43.6",
-    "@vercel/analytics": "^1.1.2",
-    "@vercel/speed-insights": "^1.0.7",
-    "clsx": "^2.1.0",
-    "contentful": "^10.6.19",
-    "date-fns": "^3.3.1",
-    "framer-motion": "^10.18.0",
-    "next": "^14.0.4",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "@eslint/eslintrc": "^3.3.3",
+    "@mdx-js/loader": "^3.1.1",
+    "@mdx-js/react": "^3.1.1",
+    "@next/mdx": "^16.1.1",
+    "@t3-oss/env-nextjs": "^0.13.10",
+    "@tailwindcss/postcss": "^4.1.18",
+    "@tanstack/react-query": "^5.90.16",
+    "@trpc/client": "^11.8.1",
+    "@trpc/next": "^11.8.1",
+    "@trpc/react-query": "^11.8.1",
+    "@trpc/server": "^11.8.1",
+    "@vercel/analytics": "^1.6.1",
+    "@vercel/speed-insights": "^1.3.1",
+    "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
+    "next": "^16.1.1",
+    "next-view-transitions": "^0.3.5",
+    "react": "19.2.3",
+    "react-dom": "19.2.3",
     "react-type-animation": "^3.2.0",
-    "react-use": "^17.5.0",
+    "react-use": "^17.6.0",
     "server-only": "^0.0.1",
-    "superjson": "^2.2.1",
-    "tailwind-gradient-mask-image": "^1.1.0",
-    "zod": "^3.22.4"
+    "superjson": "^2.2.6",
+    "zod": "^4.3.4"
   },
   "devDependencies": {
-    "@contentful/rich-text-types": "^16.3.4",
     "@svgr/webpack": "^8.1.0",
-    "@types/eslint": "^8.44.7",
-    "@types/node": "^18.17.0",
-    "@types/react": "^18.2.37",
-    "@types/react-dom": "^18.2.15",
-    "@typescript-eslint/eslint-plugin": "^6.11.0",
-    "@typescript-eslint/parser": "^6.11.0",
-    "autoprefixer": "^10.4.14",
-    "eslint": "^8.54.0",
-    "eslint-config-next": "^14.0.4",
-    "postcss": "^8.4.31",
-    "prettier": "^3.2.4",
-    "prettier-plugin-tailwindcss": "^0.5.7",
-    "tailwindcss": "^3.3.5",
-    "typescript": "^5.1.6"
+    "@types/eslint": "^9.6.1",
+    "@types/node": "^25.0.3",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
+    "@typescript-eslint/eslint-plugin": "^8.51.0",
+    "@typescript-eslint/parser": "^8.51.0",
+    "eslint": "^9.39.2",
+    "eslint-config-next": "^16.1.1",
+    "postcss": "^8.5.6",
+    "prettier": "^3.7.4",
+    "prettier-plugin-tailwindcss": "^0.7.2",
+    "tailwindcss": "^4.1.18",
+    "typescript": "^5.9.3"
   },
   "ct3aMetadata": {
     "initVersion": "7.25.2"
   },
-  "packageManager": "pnpm@8.12.1"
+  "packageManager": "bun@1.3.5"
 }
